cmake_minimum_required(VERSION 3.16)
project(diffdrive_esp_32 LANGUAGES CXX)

find_package(ros2_control_cmake REQUIRED)
set_compiler_options()
export_windows_symbols()

# find dependencies
set(THIS_PACKAGE_INCLUDE_DEPENDS
  hardware_interface
  pluginlib
  rclcpp
  rclcpp_lifecycle
)

# Specify the required version of ros2_control
find_package(controller_manager 4.0.0)
# Handle the case where the required version is not found
if(NOT controller_manager_FOUND)
  message(FATAL_ERROR "ros2_control version 4.0.0 or higher is required. "
  "Are you using the correct branch of the ros2_control_demos repository?")
endif()

# find dependencies
find_package(backward_ros REQUIRED)
find_package(ament_cmake REQUIRED)
foreach(Dependency IN ITEMS ${THIS_PACKAGE_INCLUDE_DEPENDS})
  find_package(${Dependency} REQUIRED)
endforeach()

add_library(
  diffdrive_esp_32
  SHARED
  hardware/diffbot_system.cpp
)
target_compile_features(diffdrive_esp_32 PUBLIC cxx_std_17)
target_include_directories(diffdrive_esp_32 PUBLIC
$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/hardware/include>
$<INSTALL_INTERFACE:include/diffdrive_esp_32>
)
target_include_directories(diffdrive_esp_32 PUBLIC 
${LibSerial_INCLUDE_DIRS} 
$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/hardware/include> 
$<INSTALL_INTERFACE:include/diffdrive_esp_32> 
)
target_link_libraries(diffdrive_esp_32 PUBLIC
  hardware_interface::hardware_interface
  pluginlib::pluginlib
  rclcpp::rclcpp
  rclcpp_lifecycle::rclcpp_lifecycle
  ${LibSerial_LIBRARIES}
)

# Export hardware plugins
pluginlib_export_plugin_description_file(hardware_interface diffdrive_esp.xml)

# INSTALL
install(
  DIRECTORY hardware/include/
  DESTINATION include/diffdrive_esp_32
)
install(
  DIRECTORY description/launch description/ros2_control description/urdf
  DESTINATION share/diffdrive_esp_32
)
install(
  DIRECTORY bringup/launch bringup/config
  DESTINATION share/diffdrive_esp_32
)
install(TARGETS diffdrive_esp_32
  EXPORT export_diffdriveESP32
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin
)

if(BUILD_TESTING)
  find_package(ament_cmake_pytest REQUIRED)
  ament_add_pytest_test(example_2_urdf_xacro test/test_urdf_xacro.py)

  # Integration (launch) tests
  find_package(ament_cmake_ros REQUIRED)
  find_package(launch_testing_ament_cmake REQUIRED)
  function(add_ros_isolated_launch_test path)
    set(RUNNER "${ament_cmake_ros_DIR}/run_test_isolated.py")
    add_launch_test("${path}" RUNNER "${RUNNER}" ${ARGN})
  endfunction()
  add_ros_isolated_launch_test(test/test_view_robot_launch.py)
  add_ros_isolated_launch_test(test/test_diffbot_launch.py)
endif()

## EXPORTS
ament_export_targets(export_diffdriveESP32 HAS_LIBRARY_TARGET)
ament_export_dependencies(${THIS_PACKAGE_INCLUDE_DEPENDS})
ament_package()
